--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "server": "nodemon server"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "mongoose": "^4.13.18",
+    "mongoose-express-session": "0.0.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
